--- a/AdressListWithSwift3/Controller/Contact/Detail/ContactDetailController.xib
+++ b/AdressListWithSwift3/Controller/Contact/Detail/ContactDetailController.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -10,10 +10,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ContactDetailController" customModule="AdressListWithSwift3" customModuleProvider="target">
             <connections>
-                <outlet property="_headImg" destination="Ok1-EI-WRr" id="b2A-86-2Dt"/>
-                <outlet property="_headImgTapBtn" destination="nBf-7q-M3y" id="Lud-kW-b4w"/>
-                <outlet property="_nameLab" destination="h7W-09-BvI" id="S8I-9S-CSo"/>
-                <outlet property="_tablView" destination="Y5X-Oq-O1T" id="j23-Z4-dYQ"/>
+                <outlet property="headImg" destination="Ok1-EI-WRr" id="bl7-aZ-DXP"/>
+                <outlet property="headImgTapBtn" destination="nBf-7q-M3y" id="alq-ro-MDl"/>
+                <outlet property="nameLab" destination="h7W-09-BvI" id="ASh-RT-oNN"/>
+                <outlet property="tablView" destination="Y5X-Oq-O1T" id="xB2-Jb-zbr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
